--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
     "tailwindcss": "^3.3.5"
   },
 
-  "homepage": "https://www.liquid_demo.com"
+  "homepage": "https://hudnellmarcus.github.io/liquid-demo/"
 }
