--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
@@ -50,6 +50,5 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.5"
   },
-
   "homepage": "https://hudnellmarcus.github.io/liquid-demo/"
 }
